updates to ffiec page

--- a/references.bib
+++ b/references.bib
@@ -38,7 +38,7 @@
   title = {Federal Reserve approves final rules to protect credit card users from a number of costly practices},
   url = {https://www.federalreserve.gov/newsevents/pressreleases/bcreg20100112a.htm}
 },
-@report{cfpb2013,
+@website{cfpb2013,
   author = {CFPB},
   publisher = {Consumer Financial Protection Bureau},
   year = {2013},
@@ -46,7 +46,7 @@
   title = {CARD Act Report: A review of the impact of the CARD Act on the consumer credit card market},
   url = {https://files.consumerfinance.gov/f/201309_cfpb_card-act-report.pdf}
 },
-@report{boston2014,
+@website{boston2014,
   author = {Jambulapati, Vikram and Stavins, Joanna},
   publisher = {Federal Reserve Bank of Boston},
   year = {2013},
@@ -55,7 +55,7 @@
   url = {https://www.bostonfed.org/-/media/Documents/Workingpapers/PDF/ppdp1307.pdf}
 },
 @website{cfpb2010z,
-  author = {CFPB},
+  author = {CFPBb},
   publisher = {Consumer Financial Protection Bureau},
   year = {2023},
   title = {12 CFR Part 1026 - Truth in Lending (Regulation Z)},
