--- a/data_ffiec.qmd
+++ b/data_ffiec.qmd
@@ -3,7 +3,7 @@ title: "Bank Data"
 format: html
 ---
 
-Almost every US based Bank reports quarterly to the US Federal Financial Institutions Examination Council (FFIEC) who make this data publicly available as part of their Uniform Bank Performance Reporting (UBPR) regime. The UBPR consolidates data from various reports including Balance Sheet, Income Statements, and Off-Balance sheet items. Data is available from 2002 Q4 @ffiec.
+US banks are required to report quarterly financial data e.g., Balance Sheet and Income Statements, to the US Federal Financial Institutions Examination Council (FFIEC) who make this data publicly available in a consolidated format as a part of their Uniform Bank Performance Reporting (UBPR) regime. Data is available from 2002 Q4 @ffiec.
 
 We are interested in measures that will provide insights to Bank's credit card business as shown in @tbl-ccmeasures. 
 
@@ -23,27 +23,27 @@ credit_card() |>
 
 To measure quality we can use the proportion of credit cards that are deliquient in the portfolio. This is the sum of UBPRE523 and UBPRE524; accounts that are accruing payments but are overdue by 30 day+ or are in non-accrual status i.e. non-performing loans. 
 
-However, given we are interested in the impact of a partnership, using only UBPRE524 **Credit Card Plans-30-89 DAYS P/D %** measure is ideal as it gives us the earliest indicator of delinquency.
+However, given we are interested in the impact of a partnership, using the UBPRE524 **Credit Card Plans-30-89 DAYS P/D %** measure is ideal as it gives us the earliest indicator of delinquency.
 
 ## Bank Peer Groups
 
 The scope of Banks included in our analysis is not limited to the banks involved in credit card partnerships. We can use data from FFIEC to add information about their peers i.e. other banks that are similar. 
 
-@tbl-peergrpcnt shows the 3 peer groups. National (US-wide) Credit card partnerships occur with Banks in the **Large Bank** and **Large Credit Card Bank** groups, membership of these peer groups are defined by FFIEC (See @sec-peers for full list of Banks in each peer group) [@ffiec].
+@tbl-peergrpcnt details 3 peer groups. National (US-wide) Credit card partnerships occur with Banks in the **Large Bank** and **Large Credit Card Bank** groups, membership of these peer groups are defined by FFIEC (See @sec-peers for full list of Banks in each peer group) [@ffiec].
 
-A Large Bank like CITIBANK will have a multiple businesses: household mortgages and credit cards; trading desks; investment banking; private wealth customers and more. In constrast specialised credit card business like BARCLAYS US are credit card only businesses. Consequently, we can expect to see the peer groups behave differently, and be affected differently by external factors, or exhibit different internal dynamics and risk profiles. Including the peer group in our models should help by modelling the peer group specific data characteristics. 
+A Large Bank like CITIBANK will have a multiple businesses: household mortgages and credit cards; trading desks; investment banking; private wealth customers and more. In constrast specialised credit card business like BARCLAYS US are credit card only businesses. Consequently, we expect to see the peer groups react differently to external factors, or exhibit different internal dynamics and risk profiles. 
 
 ```{r}
 #| tbl-cap: "Number of Banks in each peer group"
 #| label: tbl-peergrpcnt
 #| warning: false
 overdue30to89 <- credit_card.overdue_3089()
+target_label <- "Credit Card Plans-30-89 DAYS P/D %"
 bank_scope <- overdue30to89 |> 
                 as_tibble() |> 
                 group_by(BankName,BankType) |> 
                 summarise(total_bal = sum(abs(Value),na.rm=T)) |>
                 filter(!(is.na(total_bal)|total_bal==0))
-
 
 grp <- tibble(BankType = 'LargeBank', FFIEC_Id = '1', Criteria = 'Insured commercial banks having assets greater than $100 billion', Examples = 'CITIBANK, JPMORGAN CHASE BANK, MORGAN STANLEY') |> 
 add_row(BankType = 'LargeCreditCardBank', FFIEC_Id = '201', Criteria = 'Large Credit Card Banks: Credit card specialty banks having assets greater than $ 3 billion', Examples = 'BARCLAYS BANK, SYNCHRONY BANK, DISCOVER BANK')|> 
@@ -62,17 +62,16 @@ Why are there thousands of Banks? The US Banking system grew out of 19th-century
 
 ## Data Period
 
-Regulation implemented in 2010 had a material impact on the credit card market [@cfpb2013] and [@boston2014]. It's worth noting that @boston2014 highlight that implemention coincided with the 2008 financial crisis and recession, making it difficult to assert changes solely to regulation change [-@boston2014].
-
-We have to consider whether we should use the full time series (from 2002 Q4) or just the period post-regulatory change.
+Regulation implemented in 2010 had a material impact on the credit card market [@cfpb2013] and [@boston2014]. It's worth noting that @boston2014 highlight that regulation coincided with the 2008 financial crisis and recession, making it difficult to fully assert causation [-@boston2014].
 
 The regulations introduced were:
+
 1. Credit Card Accountability Responsibility and Disclosure (CARD) Act of 2009 which had a staggered implementation in February and August 2010. This Act has led to stricter lending criteria e.g., income and credit history checks, as it requires Banks to assess whether a potential borrower has the means to repay. High-risk borrowers like those under 21, have additional restrictions [@cfpb2013]. 
 2. Regulation Z, or the Truth in Lending Act (TILA), focuses on ensuring transparency and fairness in lending practices. For credit cards this means Banks have to provide full disclosure of the terms and conditions of a credit agreement [@cfpb2010z].
 
 We can see the impact in @fig-regulation which plots a linear trend for **Credit Card Plans-30-89 DAYS P/D %** (UBPRE524) for each peer group. Based on @fig-regulation-3 there was increasing delinquency for Large Banks and Large Credit Card Banks before regulation, but post regulation the trend has reversed and is now trending down.
 
-For our analysis we will focus on the post regulatory period. This prioritises newer credit card partnerships which is more relevant for commenting on future partnership deals. 
+For our analysis we will focus on the post regulatory period. This does mean that we will reduce our analysis to credit card partnerships post regulation, however, this is more relevant for commenting on future partnership deals. 
 
 ```{r}
 #| warning: false
@@ -80,7 +79,7 @@ For our analysis we will focus on the post regulatory period. This prioritises n
 #| fig-cap: "Impact of Regulation"
 #| fig-subcap: 
 #|   - "Bank Type have different intercepts and data patterns"
-#|   - "Variance pre and post Regulation. The variance for Large Banks and Large Credit Card Banks have reduced post regulatory changes in 2010."
+#|   - "Variance pre and post Regulation <br>(i) - CARD Act part 1 (ii) - Regulation Z and (iii) Card Act part 2 <br>The variance for Large Banks and Large Credit Card Banks have reduced post regulatory changes."
 #|   - "Linear trend pre and post Regulation."
 #| layout-ncol: 1
 reg_date_z <- as.Date("2010-07-01")
@@ -102,27 +101,25 @@ overdue30to89 |>
     group_by(BankType) |>
         summarise(val_mean = mean(Value, na.rm=T)) |> 
         autoplot(val_mean, aes(colour=BankType)) +
-        geom_smooth(method = "lm", se = FALSE, show.legend = F, size=.5) +    
+        geom_smooth(method = "lm", se = FALSE, show.legend = F, linewidth=.5) +    
         scale_color_manual(values = group.colours)+
         theme(legend.position = "top",
                 legend.title=element_blank()) +
-        labs(y="Credit Card Plans-30-89 DAYS P/D % \n mean", x="")
+        labs(y=glue("{target_label} \n mean"), x="")
 
 overdue30to89 |> 
     filter(value_diff <= 23) |>
     group_by(BankType) |> summarise(variance = var(Value)) |> 
     autoplot(variance) +
+    geom_vline(xintercept = reg_date_c1,linetype=2,colour="red", hjust = 0.05) +
+    annotate("label",label="i", x=reg_date_c1, y=20.0) +
     geom_vline(xintercept = reg_date_z,linetype=2,colour="red") +
-    annotate("text",label="Jul 2010 - Regulation Z", x=reg_date_z, y=20.0, hjust = -0.05,size =11/ .pt) +
-    geom_vline(xintercept = reg_date_c1,linetype=2,colour="red") +
-    annotate("text",label="Feb 2010 - CARD Act Part 1", x=reg_date_c1, y=25.0, hjust = -0.05,size =11/ .pt) +
+    annotate("label",label="ii", x=reg_date_z, y=18.0) +
     geom_vline(xintercept = reg_date_c2,linetype=2,colour="red") +
-    annotate("text",label="Aug 2010 CARD Act Part 2", x=reg_date_c2, y=15.0, hjust = -0.05,size =11/ .pt) +
-    labs(y="Credit Card Plans-30-89 DAYS P/D % \n variance", x="") +
+    annotate("label",label="iii", x=reg_date_c2, y=16.0, hjust = - 0.05) +
+    labs(y=glue("{target_label} \n variance"), x="") +
     scale_color_manual(values = group.colours)+
-    theme(legend.position = "top",
-                legend.title=element_blank(),
-                ) 
+    theme(legend.position = "top", legend.title=element_blank()) 
 
 
 overdue30to89 |> 
@@ -133,17 +130,16 @@ overdue30to89 |>
         autoplot(val_mean, aes(colour=BankType)) +
         geom_smooth(method = "lm", se = FALSE, show.legend = F,size=.5) +    
         scale_color_manual(values = group.colours, breaks=c("LargeBank","LargeCreditCardBank","OtherBank"))+
-        geom_vline(xintercept = reg_date_c1,linetype=2,colour="darkgrey")+
-        annotate("text",label="CARD Act Part 1 comes into effect", x=reg_date_c1, y=4.0, hjust = - 0.05,size =11/ .pt) +
-        theme(legend.position = "top",
-                legend.title=element_blank()) +
-        labs(y="Credit Card Plans-30-89 DAYS P/D % \n mean", x="")
+        geom_vline(xintercept = reg_date_c1,linetype=2,colour="red")+
+        annotate("label",label="CARD Act Part 1 comes into effect", x=reg_date_c1, y=3.5, hjust = - 0.05) +
+        labs(y=glue("{target_label} \n mean"), x="") +
+        theme(legend.position = "top", legend.title=element_blank())
 ```
 ## Bank Outliers {#sec-outliers}
 
-As we are dealing with time series data, we need to identify banks where their characteristics deviate significantly from the typical trend observed throughout the series.
+As we are dealing with time series data, we need to identify banks where their individual data characteristics are markedly different from those of its peers.
 
-An approach by @Hyndman2021 uses Principal Components Analysis (PCA) on a set of calculated statistical features such as lumpiness, stability and Seasonal-Trend decomposition using LOESS (STL) [-@Hyndman2021]. 
+@fig-outliers takes the approach from @Hyndman2021 who use Principal Components Analysis (PCA) on a set of calculated statistical features such as lumpiness, stability and Seasonal-Trend decomposition using LOESS (STL) [-@Hyndman2021]. 
  
 ```{r}
 #| warning: false
@@ -152,9 +148,8 @@ An approach by @Hyndman2021 uses Principal Components Analysis (PCA) on a set of
 #| fig-cap: "Outlier Detection using PCA"
 #| fig-subcap:
 #|   - "PCA for <span style='color:#1B9E77'>Large</span> and <span style='color:#D95F02'>Large Credit Card</span> Banks using features: lumpiness, stability and seasonal. PC1 represents the most variation in the data and PC2 represents the second most variation in the data."
-#|   - "Data series for Banks that appear to be outliers"
+#|   - "Data series for Banks with PC1 > 4 and PC2 > 2.5"
 #| layout-ncol: 1
-
 
 plot_pcs <- function(pcs) {
     pcs |>
@@ -167,18 +162,17 @@ plot_pcs <- function(pcs) {
         scale_color_manual(values = group.colours) 
 }
 
-plot_outlier <- function(data, outliers, title = "Outlier series", value_name = "Value") {
+plot_outlier <- function(data, outliers, value_name = "Value") {
     data |>
     filter(IDRSSD %in% outliers$IDRSSD) |>
     ggplot(aes(x = Quarter, y = !!as.name(value_name), col = BankName)) +
     geom_line() +
     facet_wrap(~BankName, ncol = 1) +
     theme(legend.position = "none")  +
-    labs(title = title,
-        subtitle = "US Credit Cards 30-89 days") 
+    labs(y = target_label) 
 }
 
-regulation_cutoff <- "2010-02-22"
+regulation_cutoff <- "2010 Q2"
 
 overdue30to89_post <- overdue30to89 |>
                     filter_index(regulation_cutoff ~ .) 
@@ -186,7 +180,7 @@ overdue30to89_post <- overdue30to89 |>
 overdue30to89_lbanks <- overdue30to89_post |>
                          filter(BankType %in% c("LargeBank", "LargeCreditCardBank"))
 
-all_f <- overdue30to89_post |> 
+all_f <- overdue30to89_lbanks |> 
                 features(Value, feature_set(tags = c("lumpiness","stability","seasonal")))
 
 pcs <- all_f |> 
@@ -204,11 +198,11 @@ outliers <- pcs |>
   filter( (.fittedPC2 > pc2_threshold) | (.fittedPC1 > pc1_threshold)) |>
   select(IDRSSD) 
   
-plot_outlier(overdue30to89_lbanks, outliers, title = glue("Outlier series: PC1 > {pc1_threshold} and PC2 > {pc2_threshold}"))
+plot_outlier(overdue30to89_lbanks, outliers)
 
 ```
 
-Interestingly, all the banks in fig-outliers-2 started or re-started (as was the case for Regions Bank) their credit card businesses after 2010 Q1. With the exception of Ally Bank their series start from 0 and quickly jump after one or two quarters. This is expected as it takes 30+ for credit cards to become deliquient. 
+Interestingly, all the banks in @fig-outliers-2 started or re-started (as was the case for Regions Bank) their credit card businesses after 2010 Q1. With the exception of Ally Bank the series start from 0 and quickly jump after one or two quarters. This is expected as it takes 30+ days for credit cards to become deliquient. 
 
 If we drop the first 2 non-zero quarters and re-run the PCA (see @fig-outliers-corrected) the banks are no longer outliers - indicating that it was that initial jump that was unusual.
 
@@ -245,11 +239,12 @@ final_df <- overdue30to89_post |>
 all_ftbanks <- final_df |> 
                 features(Value, feature_set(tags = c("lumpiness","stability","seasonal")))
 ```
+
 ## Exploration of Statistical Features {#sec-feature-explore}
 
-In {#sec-outliers} we calculated a 
+@fig-lfeature shows the features from @sec-outliers that we can use to explore the characteristics of each peer group (see [@tsfeatures]). 
 
-@fig-lfeature shows a number of different time series features that we can use to explore the characteristics of each peer group (see [@tsfeatures]). 
+The *Other Banks* peer group has been added for interest. 
 
 ```{r}
 #| warning: false
@@ -291,15 +286,54 @@ plot_feature_violin(all_ftbanks, "nsdiffs")
 
 ```
 
-We learn that:
+1. @fig-lfeature-1: *Other Banks* are lumpy. Also we can see from @fig-regulation-2 that the variance of *Other Banks* did not significantly reduce, we still see lumpiness post regulatory changes (though they were subject to the same regulation). 
+2. @fig-lfeature-3 *Large Credit Card* Banks are more seasonal. @fig-season shows both *Large Banks* and *Large Credit Card Banks* peak in Q3. This is surprising as I assumed events like Black Friday, Thanksgiving and Christmas would have a noticable impact in Q4 or Q1. 
+3. @fig-lfeature-4 and @fig-lfeature-5 indicates a strong linear trend for *Large Banks* and *Large Credit Card Banks*.
+4. @fig-lfeature-6 Autocorrelation coefficient close to 0 indicates weak or no linear relationship between lagged values. Of note the coefficients are negative indicating a tendency for a short-term reversal. This can be seen in @fig-regulation-1 where the values oscillate.
+5. @fig-lfeature-7 *Large Credit Card Banks* is not stationary. Performing a difference i.e. to get the quarterly change in UBPRE524, makes the series stationary. 
 
-1. @fig-lfeature-1: *Other* Banks have banks that are unusually lumpy. We can see the mean in @fig-regulation-2 where *Other Banks* variance did not appear to be as impacted by regulatory changes though they were subject to the same regulation.
-2. @fig-lfeature-3 *Large Credit Card* Banks are noticably more seasonal. 
-3. @fig-lfeature-4 and @fig-lfeature-5 indicates a strong linear trend for *Large* and *Large Credit Card* Banks.
-4. @fig-lfeature-6 Autocorrelation coefficient close to 0 indicates weak or no linear relationship between lagged values. Of note the coefficients are negative indicating a tendency for a short-term reversal.
-5. @fig-lfeature-7 **Credit Card Plans-30-89 DAYS P/D %** (UBPRE524) for *Large Credit Card* Banks is not stationary. However, a single difference i.e. to get the quarterly change in UBPRE524, makes the series stationary. 
+```{r}
+#| warning: false
+#| error: false
+#| label: fig-season
+#| fig-cap: "Quarterly Seasonal Subseries. The blue horizontal lines indicate the means for each quarter."
+final_df |> group_by(BankType) |> 
+    summarise(mean = mean(Value, na.rm=T)) |> 
+        gg_subseries() +
+        labs(y=glue("{target_label} \n mean"))
+```
+```{r}
+#| warning: false
+#| error: false
+#| label: fig-acf
+#| fig-cap: "ACF on original value (a) and first difference value (b)"
+#| fig-subcap:
+#|   - ""
+#| layout-ncol: 2
+acf_df <- final_df |> filter(BankType %in% c("LargeBank", "LargeCreditCardBank")) |>
+                group_by(BankType)|> 
+                summarise(mean_val = mean(Value, na.rm=T)) |>
+                mutate(value_diff = difference(mean_val))
 
-Before drilling to these findings, 
+acf_df |> ACF(x=mean_val,lag_max = 42) |> autoplot()
+acf_df |> ACF(x=value_diff,lag_max = 42) |> autoplot()
+```
+## Summary
 
+From the original FFIEC dataset we have:
+
+Selected
+
+1. Target measure: *Credit Card Plans-30-89 DAYS P/D %* (UBPRE524).
+2. Banks: All *Large Banks* and *Large Credit Card* Banks.
+3. Date Period: Start from 2010 Q2.
+
+Removed
+
+4. Outlier data points: first 2 quarters from banks in @fig-outliers-2.
+
+Transformed
+
+5. Target measure to first difference value.
 
 ## References
